# boax

./: .gitignore  CLAUDE.md  PLAN.md  README.md  Rakefile  boax.gemspec  package-lock.json  package.json
.github/workflows/: ci.yml
ext/boax/: Cargo.toml  extconf.rb
ext/boax/src/: lib.rs
ext/boax/src/node_apis/: assert.rs  buffer.rs  crypto.rs  events.rs  fs.rs  intl_polyfill.rs  mod.rs  os.rs  path.rs  process.rs  querystring.rs  stream.rs  string_decoder.rs  url_module.rs  util.rs
lib/: boax.rb
lib/boax/: version.rb
spec/: boax_spec.rb  buffer_spec.rb  crypto_spec.rb  extra_modules_spec.rb  fs_spec.rb  intl_spec.rb  modules_spec.rb  node_apis_spec.rb  require_spec.rb  stream_spec.rb
